# gameshow

backend/: Cargo.toml  cert.pem  key.pem
backend/src/: main.rs  rest.rs  server.rs  socket.rs
backend/src/rest/: listener.rs  ws.rs
backend/src/socket/: handler.rs  listener.rs  security.rs
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: App.js
frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/app/debug/: debug.component.html  debug.component.ts
frontend/src/app/services/: web-socket.service.ts
frontend/src/components/: nameInput.js  roleRadioInput.js
frontend/src/util/: Connection.js
