[package]
name = "gameshow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
tokio-rustls = "0.25"
rustls = "0.22"
rustls-pemfile = "1.0"
rustls-pki-types = "1.0"
actix-web = "4.0"
actix-rt = "2.5"
